Add another paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         </header>
         <main>
             <p>This is my content.</p>
+
+            <p>New paragraph.</p>
         </main>
         <footer>
             <p>This is my footer.</p>
