Rearrange file system

--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-1.css">
-    <title>Workshop-1</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Workshop 5</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>This is my header</h1>
-        </header>
-        <main>
-            <p>This is my content.</p>
+    <header>
+        <nav>
+            <ul class="navigation">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
 
-            <p>New paragraph.</p>
-        </main>
-        <footer>
-            <p>This is my footer.</p>
-        </footer>
-    </div>
 </body>
 </html>
