--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <title>CSS Mock-up Store</title>
 </head>
-<body>
+<body>  
     <header>
         <div class="header">
             <div class="keyword-wrapper">
-                <label for="keyword" class="keyword__label">OMNIcitrus</label>
-                <input type="search" id="keyword" name="keyword" class="keyword__bar" />
+                <label for="keyword" class="keyword__label">OMNI<span class="label__citrus">citrus</span></label>
+                <input type="search" id="keyword" name="keyword" class="keyword__bar" placeholder="Search our selections..."/>
                 <button id="submit" class="keyword__button">
                     <span class="material-symbols-outlined search__icon">
                         search
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <div class="wrapper">
+        <div class="main__wrapper">
             
             <div class="product-header">
                 <h2 class="product-header__title">Citrus (1kg)</h2>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="product">
                     <img src="assets/satsuma-orange.jpg" alt="Satsuma Orange"/>
-                    <span class="product__name">Mandarin Orange</span>
+                    <span class="product__name">Satsuma Orange</span>
                     <div class="product__footer">
                         <span class="product__price">฿80</span>
                         <span class="material-symbols-outlined">
@@ -175,7 +175,6 @@
             <p class="footer__text">&copy; Omnicitrus Inc., All Left Reversed.</p>
         </div>
     </footer>
-    
-
+   
 </body>
 </html>
